--- a/services/dy-jupyter/Makefile
+++ b/services/dy-jupyter/Makefile
@@ -27,13 +27,13 @@ all:
 	@echo 'see Makefile for further targets'
 
 build:	
-	${DOCKER_COMPOSE} -f docker-compose.yml build --build-arg VCS_REF=`git rev-parse --short HEAD` --build-arg BUILD_DATE=`date -u +"%Y-%m-%dT%H:%M:%SZ"`
+	${DOCKER_COMPOSE} -f docker-compose.yml build
 
 build-devel:	
-	${DOCKER_COMPOSE} -f docker-compose.yml -f docker-compose.devel.yml build --build-arg VCS_REF=`git rev-parse --short HEAD` --build-arg BUILD_DATE=`date -u +"%Y-%m-%dT%H:%M:%SZ"`
+	${DOCKER_COMPOSE} -f docker-compose.yml -f docker-compose.devel.yml build
 
 rebuild:
-	${DOCKER_COMPOSE} -f docker-compose.yml build --no-cache --build-arg VCS_REF=`git rev-parse --short HEAD` --build-arg BUILD_DATE=`date -u +"%Y-%m-%dT%H:%M:%SZ"`
+	${DOCKER_COMPOSE} -f docker-compose.yml build --no-cache
 
 up:
 	${DOCKER_COMPOSE} -f docker-compose.yml up
