--- a/services/dy-jupyter/docker-compose.yml
+++ b/services/dy-jupyter/docker-compose.yml
@@ -8,11 +8,20 @@ services:
       target: production
       args: 
         BASE_IMAGE: jupyter/base-notebook
-        SERVICE_NAME: '{"name": "jupyter-base-notebook"}'
-        SERVICE_KEY: '{"key": "simcore/services/dynamic/jupyter-base-notebook"}'
-        SERVICE_VERSION: '{"tag": "${SERVICES_VERSION}"}'
-        BUILD_DATE: ${BUILD_DATE}
-        VCS_REF: ${VCS_REF}
-    
+      labels:
+        io.simcore.key: '{"key": "simcore/services/dynamic/jupyter-base-notebook"}'        
+        io.simcore.tag: '{"tag": "${SERVICES_VERSION}"}'
+        io.simcore.name: '{"name": "jupyter-base-notebook"}'
+        io.simcore.description: '{"description": "Jupyter notebook"}'
+        io.simcore.contact: '{"contact": "anderegg@itis.swiss"}'
+        io.simcore.authors: '{"authors": [{"name": "sanderegg", "email": "anderegg@itis.swiss", "affiliation": "ITIS Foundation"}]}'
+        io.simcore.inputs: '{"inputs": [{"key": "input_1", "label": "input 1", "desc": "file input", "type": "file-url", "value": "null"}]}'
+        io.simcore.outputs: '{"outputs": [{"key": "output_1", "label": "output 1", "desc": "file output", "type": "file-url", "value": "null"}]}'
+        io.simcore.viewer: '{"viewer":{"ip":null, "port":null}}'
+        simcore.service.settings: '[{"name": "ports", "type": "int", "value": 8888}, {"name": "constraints", "type": "string", "value": ["node.platform.os == linux"]}]'
+        org.label-schema.schema-version: "1.0"
+        org.label-schema.build-date: "${BUILD_DATE}"
+        org.label-schema.vcs-url: "https://github.com/ITISFoundation/osparc-simcore"
+        org.label-schema.vcs-ref: "${VCS_REF}"
     ports:
       - '8888:8888'
