--- a/services/dy-jupyter/docker-compose.devel.yml
+++ b/services/dy-jupyter/docker-compose.devel.yml
@@ -14,6 +14,7 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
       - USE_CASE_CONFIG_FILE=devel/port_config.json      
+      - INIT_OPTIONS=10 60 2 space
     depends_on:
       - postgres
       - minio
