--- a/services/dy-2Dgraph/use-cases/Makefile
+++ b/services/dy-2Dgraph/use-cases/Makefile
@@ -11,6 +11,7 @@ endif
 export SERVICES_VERSION=1.1.0
 export VCS_REF=$(shell git rev-parse --short HEAD) 
 export BUILD_DATE=$(shell date -u +"%Y-%m-%dT%H:%M:%SZ")
+export BASE_IMAGE=masu.speag.com/simcore/services/dynamic/jupyter-base-notebook:1.4.0
 
 all:
 	@echo 'run `make build-devel` to build your dev environment'
