--- a/services/dy-2Dgraph/use-cases/docker-compose.yml
+++ b/services/dy-2Dgraph/use-cases/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       dockerfile: cc/Dockerfile
       target: production      
       args: 
+        BASE_IMAGE: ${BASE_IMAGE}
         NOTEBOOK_NAME: notebook/cc_single_cell.ipynb
         NOTEBOOK_FOLDER_NAME: cc-single-cell 
       labels: 
@@ -34,6 +35,7 @@ services:
       dockerfile: cc/Dockerfile
       target: production
       args: 
+        BASE_IMAGE: ${BASE_IMAGE}
         NOTEBOOK_NAME: notebook/cc_oned.ipynb
         NOTEBOOK_FOLDER_NAME: cc-oned        
       labels:
@@ -61,6 +63,7 @@ services:
       dockerfile: cc/Dockerfile
       target: production
       args: 
+        BASE_IMAGE: ${BASE_IMAGE}
         NOTEBOOK_NAME: notebook/cc_2d.ipynb
         NOTEBOOK_FOLDER_NAME: cc-twod   
       labels:
@@ -88,6 +91,7 @@ services:
       dockerfile: kember/Dockerfile
       target: production      
       args:
+        BASE_IMAGE: ${BASE_IMAGE}
         NOTEBOOK_NAME: notebook/kember.ipynb
       labels:
         io.simcore.key: '{"key": "simcore/services/dynamic/kember-viewer"}'
