added the second field to the required fields

--- a/apis/shared/schemas/node-output-list-api-v0.0.1.yaml
+++ b/apis/shared/schemas/node-output-list-api-v0.0.1.yaml
@@ -9,6 +9,7 @@ required:
   # the validator does not appreciate when required is missing here... and
   # sadly does not throw any meaningful error about it... so for now I put this...
   - getItemList
+  - getItem
 properties:
   getItemList:
     description: all the items in the list
