--- a/services/web/server/src/simcore_service_webserver/config/server-defaults.yaml
+++ b/services/web/server/src/simcore_service_webserver/config/server-defaults.yaml
@@ -29,3 +29,10 @@ s3:
   bucket_name: simcore
   endpoint: play.minio.io:9000
   secret_key: 'zuf+tfteSlswRu7BJ86wekitnifILbZam1KYY3TG'
+smtp:
+  sender: 'OSPARC support <support@osparc.io>',
+  host: mail.foo.com,
+  port: 25,
+  tls: False,
+  username: None,
+  password: None
