--- a/services/web/server/tests/dev/config.yaml
+++ b/services/web/server/tests/dev/config.yaml
@@ -29,3 +29,10 @@ s3:
   bucket_name: simcore
   endpoint: play.minio.io:9000
   secret_key: 'zuf+tfteSlswRu7BJ86wekitnifILbZam1KYY3TG'
+smtp:
+  sender: 'OSPARC support <support@osparc.io>',
+  host: ${SMTP_HOST},
+  port: ${SMTP_PORT},
+  tls: False,
+  username: None,
+  password: None
