--- a/.env-devel
+++ b/.env-devel
@@ -3,7 +3,7 @@ HOST_GID=1000
 DOCKER_GID=1001
 RUN_DOCKER_ENGINE_ROOT=0
 #--------
-OSPARC_PUBLIC_URL=https://simcore.io
+OSPARC_PUBLIC_URL=http://osparc01.itis.ethz.ch:9081
 POSTGRES_ENDPOINT=postgres:5432
 POSTGRES_USER=simcore
 POSTGRES_PASSWORD=simcore
