Fixes configuration errors

--- a/services/web/server/src/simcore_service_webserver/config/host-dev-config.yaml
+++ b/services/web/server/src/simcore_service_webserver/config/host-dev-config.yaml
@@ -27,11 +27,11 @@ rabbit:
   password: simcore
   user: simcore
 smtp:
-  sender: 'OSPARC support <support@osparc.io>',
-  host: mail.foo.com,
-  port: 25,
-  tls: False,
-  username: None,
+  sender: 'OSPARC support <support@osparc.io>'
+  host: mail.foo.com
+  port: 25
+  tls: False
+  username: None
   password: None
 s3:
   access_key: 'Q3AM3UQ867SPQQA43P2F'
