--- a/services/web/server/tests/unit/mock/configs/minimum.yaml
+++ b/services/web/server/tests/unit/mock/configs/minimum.yaml
@@ -34,10 +34,10 @@ s3:
   endpoint: localhost:9000
   secret_key: '12345678'
 smtp:
-  sender: 'OSPARC support <support@osparc.io>',
-  host: mail.foo.com,
-  port: 25,
-  tls: False,
-  username: None,
+  sender: 'OSPARC support <support@osparc.io>'
+  host: mail.foo.com
+  port: 25
+  tls: False
+  username: None
   password: None
 ...
