--- a/services/dy-modeling/docker-compose.yml
+++ b/services/dy-modeling/docker-compose.yml
@@ -23,13 +23,13 @@ services:
         io.simcore.key: '{"key": "simcore/services/dynamic/modeler/webserver"}'
         io.simcore.outputs: '{"outputs": []}'
         io.simcore.tag: '{"tag": "${MODELER_VERSION}"}'
-        io.simcore.dependencies: '[{"key": "simcore/services/dynamic/modeler/xrpc-worker", "tag": "1.9"}]'
         io.simcore.name: '{"name": "modeler"}'
         io.simcore.description: '{"description": "Modeler viewer"}'
         io.simcore.contact: '{"contact": "anderegg@itis.ethz.ch"}'
         io.simcore.authors: '{"authors": [{"name": "Sylvain Anderegg", "email": "anderegg@itis.ethz.ch", "affiliation": "ITIS Foundation"}]}'
         io.simcore.inputs: '{"inputs": []}'
         io.simcore.viewer: '{"viewer":{"ip":null, "port":null}}'
+        simcore.service.dependencies: '[{"key": "simcore/services/dynamic/modeler/xrpc-worker", "tag": "1.9"}]'
     ports:
       - '8080:9090'
     depends_on:
