--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,13 +1,14 @@
 # Order is important. The last matching pattern has the most precedence.
 
 # files and folders recursively
-/docs/                   @pcrespov
-/services/computation    @mguidon
-/services/dy*            @sanderegg
-/services/sidecar        @pcrespov, @mguidon
-/services/web/client     @odeimaiz, @oetiker
-/services/web/server     @pcrespov
-/services/storage        @mguidon
+/docs/                      @pcrespov
+/packages/service-library   @pcrespov
+/services/computation       @mguidon
+/services/dy*               @sanderegg
+/services/sidecar           @pcrespov, @mguidon
+/services/web/client        @odeimaiz, @oetiker
+/services/web/server        @pcrespov
+/services/storage           @mguidon
 
 # any change in travis
 /.travis.yml     @odeimaiz
