--- a/services/web/server/src/simcore_service_webserver/config/server-defaults.yaml
+++ b/services/web/server/src/simcore_service_webserver/config/server-defaults.yaml
@@ -7,6 +7,8 @@ main:
   public_url: http://localhost:9081
   testing: true
   disable_services: []
+  db:
+    init_tables: False
 director:
   host: director
   port: 8001
