Fixes sidecar: boot.sh +x Fixes missing environs in webserver

--- a/services/web/server/src/simcore_service_webserver/config/server-docker-prod.yaml
+++ b/services/web/server/src/simcore_service_webserver/config/server-docker-prod.yaml
@@ -35,7 +35,7 @@ smtp:
   sender: 'OSPARC support <support@osparc.io>'
   host: ${SMTP_HOST}
   port: ${SMTP_PORT}
-  tls: False,
-  username: None,
+  tls: False
+  username: None
   password: None
 ...
