--- a/services/docker-compose.devel.yml
+++ b/services/docker-compose.devel.yml
@@ -44,3 +44,13 @@ services:
     volumes:
       - ./sidecar:/home/scu/services/sidecar
       - ../packages:/home/scu/packages
+  #--------------------------------------------------------------------
+  storage:
+    image: services_storage:dev
+    build:
+      args:
+        - HOST_GID_ARG=${HOST_GID:?Undefined host gid}
+      target: development
+    volumes:
+      - ./storage:/home/scu/services/storage
+      - ../packages:/home/scu/packages
