--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -1,5 +1,5 @@
 version: '3.4'
-services:  
+services:
   apihub:
     build:
       context: ../
@@ -126,6 +126,33 @@ services:
     depends_on:
       - rabbit
   #--------------------------------------------------------------------
+  storage:
+    build:
+      # the context for the build is the git repo root directory, this allows to copy
+      # the packages directory into any docker image
+      context: ../
+      dockerfile: services/storage/Dockerfile
+      args:
+        - DOCKER_GID_ARG=${DOCKER_GID:?Undefined docker gid in host}
+      target: production
+    ports:
+      - "11111:11111"
+    environment:
+      - POSTGRES_ENDPOINT=${POSTGRES_ENDPOINT}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_HOST=${POSTGRES_HOST}
+      - POSTGRES_PORT=${POSTGRES_PORT}
+      - S3_ENDPOINT=${S3_ENDPOINT}
+      - S3_ACCESS_KEY=${S3_ACCESS_KEY}
+      - S3_SECRET_KEY=${S3_SECRET_KEY}
+      - S3_BUCKET_NAME=${S3_BUCKET_NAME}
+      - RUN_DOCKER_ENGINE_ROOT=${RUN_DOCKER_ENGINE_ROOT}
+    depends_on:
+      - minio
+      - postgres
+  #--------------------------------------------------------------------
   minio:
     image: minio/minio
     environment:
@@ -139,7 +166,7 @@ services:
     image: registry:2
     ports:
       - "5000:5000"
-    volumes: 
+    volumes:
       - registry:/var/lib/registry
     #--------------------------------------------------------------------
 volumes:
