--- a/services/web/server/src/simcore_service_webserver/config/server-docker-prod.yaml
+++ b/services/web/server/src/simcore_service_webserver/config/server-docker-prod.yaml
@@ -36,6 +36,6 @@ smtp:
   host: ${SMTP_HOST}
   port: ${SMTP_PORT}
   tls: False
-  username: None
-  password: None
+  username: Null
+  password: Null
 ...
