--- a/services/web/server/src/simcore_service_webserver/config/server-template.yaml
+++ b/services/web/server/src/simcore_service_webserver/config/server-template.yaml
@@ -33,7 +33,7 @@ smtp:
   sender: 'OSPARC support <support@osparc.io>'
   host: ${SMTP_HOST}
   port: ${SMTP_PORT}
-  tls: False,
-  username: None,
-  password: None
+  tls: False
+  username: Null
+  password: Null
 ...
