Squashed commit of the pr#275 (is200/auth business logic)

--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -71,6 +71,8 @@ services:
       - S3_ACCESS_KEY=${S3_ACCESS_KEY}
       - S3_SECRET_KEY=${S3_SECRET_KEY}
       - S3_BUCKET_NAME=${S3_BUCKET_NAME}
+      - SMTP_HOST=${SMTP_HOST}
+      - SMTP_PORT=${SMTP_PORT}
     depends_on:
       - webclient
   #--------------------------------------------------------------------
