--- a/services/web/server/tests/unit/mock/configs/server-host-test.yaml
+++ b/services/web/server/tests/unit/mock/configs/server-host-test.yaml
@@ -7,9 +7,6 @@ main:
   client_outdir: ../../../client/source-output
   log_level: DEBUG
   testing: True
-  disable_services:
-  - postgres
-  - rabbit
 director:
   host: localhost
   port: 8001
@@ -18,7 +15,7 @@ postgres:
   user: test_user
   password: test_pass
   host: localhost
-  port: 0000
+  port: ${POSTGRES_PORT}
   # DEPRECATE OR add postgresql+psycopg2:// otherwise will fail sqlalchemy.exc.ArgumentError: Could not parse rfc1738 URL from string 'localhost:5432'
   endpoint: localhost:5432
 rabbit:
@@ -33,4 +30,11 @@ s3:
   bucket_name: simcore
   endpoint: localhost:9000
   secret_key: '12345678'
+smtp:
+  sender: 'OSPARC support <support@osparc.io>'
+  host: mail.foo.com
+  port: 25
+  tls: False
+  username: None
+  password: None
 ...
