--- a/services/web/server/tests/unit/mock/configs/light-test.yaml
+++ b/services/web/server/tests/unit/mock/configs/light-test.yaml
@@ -4,7 +4,7 @@ version: "1.0"
 main:
   host: 127.0.0.1
   port: 8080
-  client_outdir: client/source-output
+  client_outdir: ../../../client/source-output
   log_level: DEBUG
   testing: True
   disable_services:
@@ -22,7 +22,7 @@ postgres:
   # DEPRECATE OR add postgresql+psycopg2:// otherwise will fail sqlalchemy.exc.ArgumentError: Could not parse rfc1738 URL from string 'localhost:5432'
   endpoint: localhost:5432
 rabbit:
-  host: foo
+  host: ${RABBIT_HOST}
   password: simcore
   user: simcore
   channels:
@@ -33,4 +33,11 @@ s3:
   bucket_name: simcore
   endpoint: localhost:9000
   secret_key: '12345678'
+smtp:
+  sender: 'OSPARC support <support@osparc.io>'
+  host: mail.foo.com
+  port: 25
+  tls: False
+  username: None
+  password: None
 ...
