--- a/services/web/server/tests/unit/mock/configs/minimum.yaml
+++ b/services/web/server/tests/unit/mock/configs/minimum.yaml
@@ -4,9 +4,12 @@ version: "1.0"
 main:
   host: 127.0.0.1
   port: 8080
-  client_outdir: ../../../client/source-output
+  client_outdir: client/source-output
   log_level: DEBUG
   testing: True
+  disable_services:
+  - postgres
+  - rabbit
 director:
   host: localhost
   port: 8001
@@ -15,11 +18,11 @@ postgres:
   user: test_user
   password: test_pass
   host: localhost
-  port: ${POSTGRES_PORT}
+  port: 0000
   # DEPRECATE OR add postgresql+psycopg2:// otherwise will fail sqlalchemy.exc.ArgumentError: Could not parse rfc1738 URL from string 'localhost:5432'
   endpoint: localhost:5432
 rabbit:
-  host: ${RABBIT_HOST}
+  host: foo
   password: simcore
   user: simcore
   channels:
@@ -30,4 +33,11 @@ s3:
   bucket_name: simcore
   endpoint: localhost:9000
   secret_key: '12345678'
+smtp:
+  sender: 'OSPARC support <support@osparc.io>'
+  host: mail.foo.com
+  port: 25
+  tls: False
+  username: None
+  password: None
 ...
