--- a/services/dy-jupyter/devel/port_config.json
+++ b/services/dy-jupyter/devel/port_config.json
@@ -1,29 +1,29 @@
 {
     "version":"0.1",
-    "inputs": [
-        {
-            "key": "input_1",
-            "label": "input 1",
-            "desc": "input 1",
-            "type": "file-url",
-            "value": "link.SIMCORE_NODE_UUID.FILENAME_ID",
-            "settings": {
-                "value":"null"
+    "schema": {
+        "inputs": {
+            "input_1": {
+                "displayOrder":0,
+                "label": "input 1",
+                "description": "input 1",
+                "type": "data:*/*"
             },
-            "widget":"stuff"
+            "input_2": {
+                "displayOrder":1,
+                "label": "input 2",
+                "description": "input 2",
+                "type": "data:*/*"
+            }
+        },
+        "outputs": {
+            "output_1": {
+                "displayOrder": 0,
+                "label": "output 1",
+                "description": "this is the output number 1",
+                "type": "data:*/*"
+            }
         }
-    ],
-    "outputs": [
-        {
-            "key": "output_1",
-            "label": "output 1",
-            "desc": "this is the output number 1",
-            "type": "file-url",
-            "value": "null",
-            "settings": {
-                "value":"null"
-            },
-            "widget":"stuff"
-        }
-    ]
+    },
+    "inputs":{},
+    "outputs":{}
 }
