--- a/services/dy-2Dgraph/use-cases/cc/cc-twod/devel-config/port_config.json
+++ b/services/dy-2Dgraph/use-cases/cc/cc-twod/devel-config/port_config.json
@@ -19,7 +19,7 @@
             "output_2": {
                 "label": "Output 2",
                 "displayOrder": 1,
-                "desc": "The output 2",
+                "description": "The output 2",
                 "type": "data:*/*"
             }
         }
