lets see if validation works now

--- a/api/specs/webserver/v0/node-v0.0.1.yaml
+++ b/api/specs/webserver/v0/node-v0.0.1.yaml
@@ -67,20 +67,22 @@ paths:
          content:
             application/json:
               schema:
-                type: object
-                # oneOf:
-                #   - $ref: '../../shared/schemas/node-output-list-api-v0.0.1.yaml#/properties/getItemList/request'
-                #   - $ref: '../../shared/schemas/node-output-list-api-v0.0.1.yaml#/properties/getItem/request'
+                oneOf:
+                   - $ref: '../../shared/schemas/node-output-list-api-v0.0.1.yaml#/properties/getItemList/request'
+                   - $ref: '../../shared/schemas/node-output-list-api-v0.0.1.yaml#/properties/getItem/request'
+                   - $ref: '../../shared/schemas/node-output-tree-api-v0.0.1.yaml#/properties/getItemList/request'
+                   - $ref: '../../shared/schemas/node-output-tree-api-v0.0.1.yaml#/properties/getItem/request'
       responses:
         default:
           description: node type specific api call according to the node type presented
           content:
             application/json:
               schema:
-                type: object
-                # oneOf:
-                #   - $ref: '../../shared/schemas/node-output-list-api-v0.0.1.yaml#/properties/getItemList/response'
-                #   - $ref: '../../shared/schemas/node-output-list-api-v0.0.1.yaml#/properties/getItem/response'
+                oneOf:
+                   - $ref: '../../shared/schemas/node-output-list-api-v0.0.1.yaml#/properties/getItemList/response'
+                   - $ref: '../../shared/schemas/node-output-list-api-v0.0.1.yaml#/properties/getItem/response'
+                   - $ref: '../../shared/schemas/node-output-tree-api-v0.0.1.yaml#/properties/getItemList/response'
+                   - $ref: '../../shared/schemas/node-output-tree-api-v0.0.1.yaml#/properties/getItem/response'
 
   /node/{nodeInstanceUUID}/iframe:
     get:
@@ -122,10 +124,6 @@ components:
           type: string
         config:
           type: object
-        apiCalls:
-          type: object
-          # oneOf:
-          #     - $ref: '../../shared/schemas/node-output-list-api-v0.0.1.yaml#/properties'
     outputApiCall:
       type: object
       properties:
