--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,10 @@ matrix:
       services:
         - docker
 
+      cache:
+        directories:
+          - '.cache/pip'
+
       before_install:
         - python --version
         - uname -a
