--- a/services/docker-compose.devel.yml
+++ b/services/docker-compose.devel.yml
@@ -6,7 +6,7 @@ services:
     build:
       target: development
     volumes:
-      - '../apis:/srv/http/apis'
+      - '../api:/srv/http/apis'
   #--------------------------------------------------------------------
   director:
     image: services_director:dev
