properly cache pip

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,7 @@ matrix:
       services:
         - docker
 
-      cache:
-        directories:
-          - '.cache/pip'
+      cache: pip
 
       before_install:
         - python --version
