--- a/.env-devel
+++ b/.env-devel
@@ -21,3 +21,6 @@ S3_SECRET_KEY=12345678
 S3_BUCKET_NAME=simcore
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=465
+VENV2=123
+BF_API_KEY="none"
+BF_API_SECRET="none"
