--- a/services/docker-compose.deploy.devel.yml
+++ b/services/docker-compose.deploy.devel.yml
@@ -34,6 +34,7 @@ services:
       - S3_ACCESS_KEY=12345678
       - S3_SECRET_KEY=12345678
       - S3_BUCKET_NAME=simcore
+      - PUBLISHED_HOST_NAME=localhost
   webclient:
     image: services_webclient:dev
     deploy:
