--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -153,8 +153,8 @@ services:
       - S3_SECRET_KEY=${S3_SECRET_KEY}
       - S3_BUCKET_NAME=${S3_BUCKET_NAME}
       - RUN_DOCKER_ENGINE_ROOT=${RUN_DOCKER_ENGINE_ROOT}
-      - BF_API_SECRET={BF_API_SECRET}
-      - BF_API_KEY={BF_API_KEY}
+      - BF_API_SECRET=${BF_API_SECRET}
+      - BF_API_KEY=${BF_API_KEY}
     depends_on:
       - minio
       - postgres
