--- a/services/docker-compose.deploy.devel.yml
+++ b/services/docker-compose.deploy.devel.yml
@@ -66,6 +66,8 @@ services:
       - S3_ACCESS_KEY=12345678
       - S3_SECRET_KEY=12345678
       - S3_BUCKET_NAME=simcore
+      - SMTP_HOST=smtp.gmail.com
+      - SMTP_PORT=465
   rabbit:
     image: rabbitmq:3-management
     environment:
