--- a/services/docker-compose.deploy.devel.yml
+++ b/services/docker-compose.deploy.devel.yml
@@ -51,7 +51,7 @@ services:
         constraints:
           - node.platform.os == linux
     environment:
-      - OSPARC_PUBLIC_URL=http://osparc01.itis.ethz.ch:9081
+      - OSPARC_PUBLIC_URL=http://localhost:9081
       - POSTGRES_ENDPOINT=postgres
       - POSTGRES_USER=simcore
       - POSTGRES_PASSWORD=simcore
