fixed crash when no datcore present

--- a/.env-devel
+++ b/.env-devel
@@ -23,5 +23,5 @@ S3_BUCKET_NAME=simcore
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=465
 VENV2=123
-BF_API_KEY="none"
-BF_API_SECRET="none"
+BF_API_KEY=none
+BF_API_SECRET=none
