fixed openapi definition for getting locations - was not returning enveloped response

--- a/services/storage/src/simcore_service_storage/oas3/v0/components/schemas/files.yml
+++ b/services/storage/src/simcore_service_storage/oas3/v0/components/schemas/files.yml
@@ -5,7 +5,7 @@ FileMetaDataEnveloped:
     - error
   properties:
     data:
-      $ref: '#/FileMetaData'
+      $ref: '#/FileMetaDataArray'
       nullable: true
       default: null
     error:
