--- a/services/storage/src/simcore_service_storage/oas3/v0/components/schemas/locations.yml
+++ b/services/storage/src/simcore_service_storage/oas3/v0/components/schemas/locations.yml
@@ -5,7 +5,7 @@ FileLocationEnveloped:
     - error
   properties:
     data:
-      $ref: '#/FileLocation'
+      $ref: '#/FileLocationArray'
       nullable: true
       default: null
     error:
