--- a/services/storage/client-sdk/output.yaml
+++ b/services/storage/client-sdk/output.yaml
@@ -641,17 +641,95 @@ paths:
           content:
             application/json:
               schema:
-                items:
-                  example:
-                    filename: simcore.s3
-                    id: 0
-                  properties:
-                    id:
-                      type: number
-                    name:
-                      type: string
-                  type: object
-                type: array
+                properties:
+                  data:
+                    items:
+                      example:
+                        filename: simcore.s3
+                        id: 0
+                      properties:
+                        id:
+                          type: number
+                        name:
+                          type: string
+                      type: object
+                    type: array
+                  error:
+                    example:
+                      BadRequestError:
+                        errors:
+                        - code: InvalidEmail
+                          field: email
+                          message: Email is malformed
+                        - code: UnsavePassword
+                          field: pasword
+                          message: Password is not secure
+                        logs:
+                        - level: ERROR
+                          message: Requested information is incomplete or malformed
+                        - level: ERROR
+                          logger: USER
+                          message: Invalid email and password
+                        status: 400
+                    properties:
+                      errors:
+                        description: errors metadata
+                        items:
+                          properties:
+                            code:
+                              description: Typically the name of the exception that
+                                produced it otherwise some known error code
+                              type: string
+                            field:
+                              description: Specific field within the resource
+                              type: string
+                            message:
+                              description: Error message specific to this item
+                              type: string
+                            resource:
+                              description: API resource affected by this error
+                              type: string
+                          required:
+                          - code
+                          - message
+                          type: object
+                        type: array
+                      logs:
+                        description: log messages
+                        items:
+                          example:
+                            level: INFO
+                            logger: user-logger
+                            message: Hi there, Mr user
+                          properties:
+                            level:
+                              default: INFO
+                              description: log level
+                              enum:
+                              - DEBUG
+                              - WARNING
+                              - INFO
+                              - ERROR
+                              type: string
+                            logger:
+                              description: name of the logger receiving this message
+                              type: string
+                            message:
+                              description: log message. If logger is USER, then it
+                                MUST be human readable
+                              type: string
+                          required:
+                          - message
+                          type: object
+                        type: array
+                      status:
+                        description: HTTP error code
+                        type: integer
+                    type: object
+                required:
+                - data
+                - error
+                type: object
           description: List of availabe storage locations
         default:
           content:
@@ -763,50 +841,128 @@ paths:
           content:
             application/json:
               schema:
-                items:
-                  example:
-                    bucket_name: simcore-testing
-                    file_id: '3'
-                    file_name: example.txt
-                    file_uuid: simcore.s3/simcore-testing/105/1000/3
-                    location_id: '0'
-                    location_name: simcore.s3
-                    node_id: '10000'
-                    node_name: alpha
-                    object_name: 105/10000/3
-                    project_id: '105'
-                    project_name: futurology
-                    user_id: '12'
-                    user_name: dennis
-                  properties:
-                    bucket_name:
-                      type: string
-                    file_id:
-                      type: string
-                    file_name:
-                      type: string
-                    file_uuid:
-                      type: string
-                    location:
-                      type: string
-                    location_id:
-                      type: string
-                    node_id:
-                      type: string
-                    node_name:
-                      type: string
-                    object_name:
-                      type: string
-                    project_id:
-                      type: string
-                    project_name:
-                      type: string
-                    user_id:
-                      type: string
-                    user_name:
-                      type: string
-                  type: object
-                type: array
+                properties:
+                  data:
+                    items:
+                      example:
+                        bucket_name: simcore-testing
+                        file_id: '3'
+                        file_name: example.txt
+                        file_uuid: simcore.s3/simcore-testing/105/1000/3
+                        location_id: '0'
+                        location_name: simcore.s3
+                        node_id: '10000'
+                        node_name: alpha
+                        object_name: 105/10000/3
+                        project_id: '105'
+                        project_name: futurology
+                        user_id: '12'
+                        user_name: dennis
+                      properties:
+                        bucket_name:
+                          type: string
+                        file_id:
+                          type: string
+                        file_name:
+                          type: string
+                        file_uuid:
+                          type: string
+                        location:
+                          type: string
+                        location_id:
+                          type: string
+                        node_id:
+                          type: string
+                        node_name:
+                          type: string
+                        object_name:
+                          type: string
+                        project_id:
+                          type: string
+                        project_name:
+                          type: string
+                        user_id:
+                          type: string
+                        user_name:
+                          type: string
+                      type: object
+                    type: array
+                  error:
+                    example:
+                      BadRequestError:
+                        errors:
+                        - code: InvalidEmail
+                          field: email
+                          message: Email is malformed
+                        - code: UnsavePassword
+                          field: pasword
+                          message: Password is not secure
+                        logs:
+                        - level: ERROR
+                          message: Requested information is incomplete or malformed
+                        - level: ERROR
+                          logger: USER
+                          message: Invalid email and password
+                        status: 400
+                    properties:
+                      errors:
+                        description: errors metadata
+                        items:
+                          properties:
+                            code:
+                              description: Typically the name of the exception that
+                                produced it otherwise some known error code
+                              type: string
+                            field:
+                              description: Specific field within the resource
+                              type: string
+                            message:
+                              description: Error message specific to this item
+                              type: string
+                            resource:
+                              description: API resource affected by this error
+                              type: string
+                          required:
+                          - code
+                          - message
+                          type: object
+                        type: array
+                      logs:
+                        description: log messages
+                        items:
+                          example:
+                            level: INFO
+                            logger: user-logger
+                            message: Hi there, Mr user
+                          properties:
+                            level:
+                              default: INFO
+                              description: log level
+                              enum:
+                              - DEBUG
+                              - WARNING
+                              - INFO
+                              - ERROR
+                              type: string
+                            logger:
+                              description: name of the logger receiving this message
+                              type: string
+                            message:
+                              description: log message. If logger is USER, then it
+                                MUST be human readable
+                              type: string
+                          required:
+                          - message
+                          type: object
+                        type: array
+                      status:
+                        description: HTTP error code
+                        type: integer
+                    type: object
+                required:
+                - data
+                - error
+                type: object
           description: list of file meta-datas
         default:
           content:
