--- a/packages/service-library/tests/data/v3.0/enveloped_responses.yaml
+++ b/packages/service-library/tests/data/v3.0/enveloped_responses.yaml
@@ -6,23 +6,27 @@ paths:
   /dict:
     get:
       operationId: get_dict
+      responses:
+        default:
+          $ref: "#/components/responses/EnvelopedDataResponse"
   /attobj:
     get:
       operationId: get_attobj
+      responses:
+        default:
+          $ref: "#/components/responses/EnvelopedDataResponse"
   /envelope:
     get:
       operationId: get_envelope
       responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/EnvelopedData"
+        default:
+          $ref: "#/components/responses/EnvelopedDataResponse"
   /list:
     get:
       operationId: get_list
       responses:
-        "200":
+        default:
+          description: "fake desc"
           content:
             application/json:
               schema:
@@ -31,7 +35,8 @@ paths:
     get:
       operationId: get_string
       responses:
-        "200":
+        default:
+          description: "default desc"
           content:
             application/json:
               schema:
@@ -40,7 +45,8 @@ paths:
     get:
       operationId: get_string
       responses:
-        "200":
+        default:
+          description: "default desc"
           content:
             application/json:
               schema:
@@ -50,7 +56,8 @@ paths:
     get:
       operationId: get_mixed
       responses:
-        "200":
+        default:
+          description: "default desc"
           content:
             application/json:
               schema:
@@ -66,42 +73,38 @@ components:
           items:
             type: object
         error:
-          $ref: '#/components/schema/Error'
+          $ref: "#/components/schemas/Error"
     EnvelopedNumber:
       type: object
       properties:
         data:
           type: number
         error:
-          $ref: '#/components/schema/Error'
+          $ref: "#/components/schemas/Error"
     EnvelopedString:
       type: object
       properties:
         data:
           type: string
         error:
-          $ref: '#/components/schema/Error'
+          $ref: "#/components/schemas/Error"
     EnvelopedData:
       type: object
       properties:
         data:
-          $ref: '#/components/schemas/Data'
+          $ref: "#/components/schemas/Data"
         error:
-          $ref: '#/components/schema/Error'
+          $ref: "#/components/schemas/Error"
     EnvelopedDataArray:
       type: object
       properties:
         data:
           type: array
           items:
-            $ref: '#/components/schemas/Data'
+            $ref: "#/components/schemas/Data"
         error:
-          $ref: '#/components/schema/Error'
-    Error:
-      type: object
-      properties:
-        message:
-          type: string
+          $ref: "#/components/schemas/Error"
+    # -----
     Data:
       type: object
       properties:
@@ -109,3 +112,21 @@ components:
           type: integer
         y:
           type: string
+    Error:
+      type: object
+      properties:
+        code:
+          type: string
+        message:
+          type: string
+        resource:
+          type: string
+        field:
+          type: string
+  responses:
+    EnvelopedDataResponse:
+      description: foo
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/EnvelopedData"
