servicelib middelwares  - testing different returns (still fails)  - added automatic routing from namespace  - minor fixes

--- a/packages/service-library/tests/data/v3.0/enveloped_responses.yaml
+++ b/packages/service-library/tests/data/v3.0/enveloped_responses.yaml
@@ -43,7 +43,7 @@ paths:
                 $ref: "#/components/schemas/EnvelopedString"
   /number:
     get:
-      operationId: get_string
+      operationId: get_number
       responses:
         default:
           description: "default desc"
